@@ -1,0 +1,1 @@
+super-init-not-called:50:4:51:11:TestChild.__init__:__init__ method from base class 'TestParent' is not called:INFERENCE
